# facet

./: .env.example  .gitignore  AGENTS.md  README.md  UI-TESTS.md  VISION.md  docker-compose.yml  prd.md
.beads/: issues.jsonl
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_add_setup_deadline.sql  004_add_admin_sessions.sql  005_add_employee_sessions.sql  006_soft_delete_tickets.sql
apps/api/src/: auth.rs  cors.rs  db.rs  error.rs  lib.rs  main.rs  response.rs  storage.rs
apps/api/src/config/: mod.rs
apps/api/src/handlers/: admin.rs  customers.rs  employees.rs  locations.rs  mod.rs  settings.rs  tickets.rs
apps/api/src/middleware/: body_limit.rs  mod.rs  rate_limit.rs  rbac.rs
apps/api/src/models/: admin_session.rs  customer.rs  employee.rs  employee_session.rs  field_history.rs  mod.rs  status_history.rs  storage_location.rs  store_settings.rs  ticket.rs  ticket_note.rs  ticket_photo.rs
apps/api/src/repositories/: admin_session.rs  customer.rs  employee.rs  employee_session.rs  field_history.rs  mod.rs  status_history.rs  storage_location.rs  store_settings.rs  ticket.rs  ticket_note.rs  ticket_photo.rs
apps/api/src/routes/: health.rs  mod.rs
apps/api/src/services/: mod.rs  pdf.rs
apps/api/src/utils/: file_validation.rs  mod.rs
apps/api/src/validation/: constraints.rs  mod.rs  references.rs  sanitize.rs
apps/web/: .gitignore  package-lock.json  package.json  vite.config.ts
apps/web/src/: app.css  app.html
docs/: API.md  PRD.md  SCHEMA.md  SECURITY_REVIEW.md  UI-UX.md
(+48 files in other folders)
